test/mpi/errors/rma/.cvsignore
*.vcproj
Makefile.in
Makefile
.deps
*ebug
*elease
